# dotglob

./: .gitignore  README.md  pyproject.toml
src/dotglob/: __init__.py  __main__.py  globber.py
tests/: test_dotglob.py
