[project]
name = "dotglob"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Catherine Devlin", email = "catherine.devlin@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
"dotglob" = "dotglob:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "black>=24.4.0",
    "isort>=5.13.2",
    "ruff>=0.3.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotglob"]
